# teaching-pytest

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
notebooks/: walkthrough.ipynb
superhelpful/: utilities.py
tests/: conftest.py  test_examples.py  test_utilities.py
